# quote-bot

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  quote.cabal  quote.lock-8.0.2  quote.lock-8.2.2  quote.lock-8.4.4
config/: dev.env
example/: quotes.txt
main/: quote-bot.hs  quote-loader.hs
src/: Quote.hs
src/Quote/: Data.hs  EitherT.hs  Linklater.hs  Prelude.hs  Store.hs
src/Quote/Store/: Memory.hs  Postgres.hs
test/: test.hs
test/Test/: Quote.hs
test/Test/Quote/Store/: Postgres.hs
