name: quote
version: 0.0.1
license: BSD3
author: Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2018 Mark Hibberd
cabal-version: >= 1.22
build-type: Custom
description:
  Slack quote bot.

library
  default-language: Haskell2010

  build-depends:
      base >= 3 && < 5
    , bytestring == 0.10.*
    , containers >= 0.5 && < 0.7
    , linklater == 4.0.*
    , mwc-random == 0.13.*
    , text == 1.2.*
    , traction == 0.*
    , transformers == 0.5.*
    , Cabal == 1.24.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Quote
    Quote.Data
    Quote.EitherT
    Quote.Prelude
    Quote.Store
    Quote.Store.Postgres
    Quote.Store.Memory



executable quote-bot
  default-language: Haskell2010

  ghc-options:
                    -Wall -threaded -O2
                    -rtsopts -with-rtsopts "-T -N"

  hs-source-dirs:
                    gen

  main-is:
                    ../main/quote-bot.hs

  build-depends:
      base
    , containers
    , linklater == 4.0.*
    , nest == 0.*
    , text
    , traction
    , transformers
    , quote
    , warp == 3.*

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , bytestring
    , containers
    , hedgehog == 0.5.*
    , mmorph
    , text
    , traction
    , quote

  ghc-options:
    -Wall
    -threaded
    -O2
